--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "tests/test_helper/bats-assert"]
 	path = tests/test_helper/bats-assert
 	url = https://github.com/bats-core/bats-assert.git
+[submodule "tests/test_helper/bats-file"]
+	path = tests/test_helper/bats-file
+	url = https://github.com/bats-core/bats-file.git
